# rules-go-cycle-repro

./: BUILD  MODULE.bazel  README.md  go.mod  go.sum  lib.go
